--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/Ryanh899/hair-authority-directory-#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.20.8",
-    "mysql": "^2.17.1",
-    "mysql2": "^2.1.0"
+    "lodash": "^4.17.15",
+    "mysql2": "^2.1.0",
+    "pg": "^7.17.1"
   }
 }
