--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.8",
     "lodash": "^4.17.15",
     "mysql2": "^2.1.0",
