--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.15",
     "morgan": "^1.9.1",
     "mysql2": "^2.1.0",
+    "node-geocoder": "^3.25.0",
     "pg": "^7.17.1"
   }
 }
