--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/Ryanh899/hair-authority-directory-#readme",
   "dependencies": {
+    "@google/maps": "^1.1.0",
     "@hapi/joi": "^17.1.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
+    "google-distance": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.8",
     "lodash": "^4.17.15",
