--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@google/maps": "^1.1.0",
     "@hapi/joi": "^17.1.0",
     "body-parser": "^1.19.0",
+    "csv-parser": "^2.3.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
