--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Ryanh899/hair-authority-directory-#readme",
   "dependencies": {
     "@hapi/joi": "^17.1.0",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "csv-parser": "^2.3.2",
     "dotenv": "^8.2.0",
@@ -32,6 +33,7 @@
     "morgan": "^1.9.1",
     "mysql2": "^2.1.0",
     "node-geocoder": "^3.25.0",
-    "pg": "^7.17.1"
+    "pg": "^7.17.1",
+    "superagent": "^5.2.2"
   }
 }
