zoho routes + styling

--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
-NODE_ENV=development
-PRIVATE_KEY=testtesttest
-GOOGLE_DEV_API_KEY=AIzaSyBzwFcR1tSuszjACQkI67oXrQevIpBIuFo
-AWS_HOST=ha-db-1.cszyo5l02wbo.us-east-1.rds.amazonaws.com
-AWS_PSWD=VQ2R92zaHgfMTppj
-AWS_USER=postgres
-AWS_DB=ha_db_1
+NODE_ENV="development"
+PRIVATE_KEY="testtesttest"
+GOOGLE_DEV_API_KEY="AIzaSyBzwFcR1tSuszjACQkI67oXrQevIpBIuFo"
+AWS_HOST="ha-db-1.cszyo5l02wbo.us-east-1.rds.amazonaws.com"
+AWS_PSWD="VQ2R92zaHgfMTppj"
+AWS_USER="postgres"
+AWS_DB="ha_db_1"
+ZOHO_REFRESH_TOKEN="1000.f7b9f95a456bb042db7746fd359df4f3.0a4fc127d4eb97bee90cbcd9c184ec4b"
+ZOHO_CLIENT_ID="1000.SIX3ISK8PM6ID3DVC2INO65G2YYPWH"
+ZOHO_CLIENT_SECRET="7f56c4ed10eb417b432e9c1327f423f4b2095da15f"
