--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Ryanh899/hair-authority-directory-#readme",
   "dependencies": {
     "@hapi/joi": "^17.1.0",
+    "aws-sdk": "^2.635.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "csv-parser": "^2.3.2",
@@ -37,7 +38,8 @@
     "mysql2": "^2.1.0",
     "node-geocoder": "^3.25.0",
     "pg": "^7.17.1",
-    "superagent": "^5.2.2"
+    "superagent": "^5.2.2",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "pm2": "^4.2.3"
