--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ ZOHO_REFRESH_TOKEN="1000.f7b9f95a456bb042db7746fd359df4f3.0a4fc127d4eb97bee90cbc
 ZOHO_CLIENT_ID="1000.SIX3ISK8PM6ID3DVC2INO65G2YYPWH"
 ZOHO_CLIENT_SECRET="7f56c4ed10eb417b432e9c1327f423f4b2095da15f"
 BUCKETNAME="ha-images-02"
+ORGANIZATION_ID="710064782"
