--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "node-geocoder": "^3.25.0",
     "pg": "^7.17.1",
     "superagent": "^5.2.2",
-    "uuid": "^7.0.2"
+    "uuid": "^7.0.2",
+    "uuid-parse": "^1.1.0"
   },
   "devDependencies": {
     "pm2": "^4.2.3"
