--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "knex": "^0.20.8",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
     "morgan": "^1.9.1",
     "mysql2": "^2.1.0",
     "node-geocoder": "^3.25.0",
